// Code generated by sgen.exe,2022-05-18 09:13:08. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";

import "common.proto";
import "google/api/annotations.proto";
import "scene_intelligence_model.gen.proto";

service SceneIntelligenceService {
    //创建
    rpc Create(SceneIntelligence) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligence/create"
			body:"*"
		};
	}
    //匹配多条件删除
	rpc Delete(SceneIntelligence) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligence/delete"
			body:"*"
		};
	}
    //匹配主键删除,一般是Id
	rpc DeleteById(SceneIntelligence) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligence/deleteById"
			body:"*"
		};
	}
    //匹配主键批量删除
    rpc DeleteByIds(SceneIntelligenceBatchDeleteRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligence/DeleteByIds"
            body:"*"
        };
    }
    //根据主键更新非空字段
	rpc Update(SceneIntelligence) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligence/update"
			body:"*"
		};
	}
    //根据主键更新所有字段
    rpc UpdateAll(SceneIntelligence) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligence/updateAll"
            body:"*"
        };
    }
    //根据主键更新指定列
    rpc UpdateFields(SceneIntelligenceUpdateFieldsRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligence/updateFields"
            body:"*"
        };
    }
    //根据主键查找,一般是Id,返回单条数据
	rpc FindById(SceneIntelligenceFilter) returns (SceneIntelligenceResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligence/findById"
			body:"*"
		};
	}
    //多条件查找，返回单条数据
    rpc Find(SceneIntelligenceFilter) returns (SceneIntelligenceResponse) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligence/find"
            body:"*"
        };
    }
    //查找，支持分页，可返回多条数据
	rpc Lists(SceneIntelligenceListRequest) returns (SceneIntelligenceResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligence/lists"
			body:"*"
		};
	}
}
